@@ -440,8 +440,8 @@ Position of current tune in seconds
 Player status (Playing/Paused/Stopped/Not running)
 
 .TP 
-\fB\*(T<\fBaudacious_title\fR\*(T>\fR 
-Title of current tune
+\fB\*(T<\fBaudacious_title\fR\*(T>\fR \*(T<\fB(max length)\fR\*(T> 
+Title of current tune with optional maximum length specifier
 
 .TP 
 \fB\*(T<\fBbattery\fR\*(T>\fR \*(T<\fB(num)\fR\*(T> 
