@@ -4,6 +4,8 @@
 	* Added $entropy_avail, $entropy_poolsize and $entropy_bar
 	for the crypto freaks.  Idea suggested by Perttu Luukko
 	<nuteater@users.sourceforge.net> in feature request 1497050.
+	* Added max length specifier to audacious_title.  Closes
+	feature request #1600631.
 
 2006-11-28
 	* Rearrange retry attempts in pop3 and imap code, removing sleep() 
